Fix hamburger button on mobile

--- a/resources/sass/nav/_nav.sass
+++ b/resources/sass/nav/_nav.sass
@@ -10,6 +10,9 @@
         img
             filter: invert(1)
 
+    #mainmenu-toggle-overlay
+        background-color: $main-color !important
+
     .nav
         .active
             background-color: rgba(0,0,0,.1) !important
